--- a/vignettes/quick_start_guide.Rmd
+++ b/vignettes/quick_start_guide.Rmd
@@ -12,7 +12,7 @@ vignette: >
   %\VignetteIndexEntry{quickStart}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-package: sharedObject
+package: SharedObject
 ---
 
 ```{r setup, include = FALSE}
