push to bioconductor

--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,4 @@
 Changes in version 0.99.0 (2019-05-16)
 + Submitted to Bioconductor
+Changes in version 0.99.2 (2019-08-6)
++ Clean some formating issues
